<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="25dp"
            android:text="@string/welcome"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="56dp"
            tools:textSize="30sp" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_marginLeft="125dp"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="99dp" />

        <Button
            android:id="@+id/hostGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_host_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="297dp" />

        <Button
            android:id="@+id/joinGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_join_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="249dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>